test/integration/bad/lang/bad_function.stan
generated quantities {
   real x;
   x();
}
